--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -58,7 +58,8 @@
                 "env": {}
             }
         ],
-        "latex-workshop.latex.outDir": "%DIR%/build"
+        "latex-workshop.latex.outDir": "%DIR%/build",
+        "python.analysis.extraPaths": ["hcmsfem"]
     },
     "launch": {
         "version": "0.2.0",
